fixing migration issues